--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
   </main>
 
-  <script src="scripts/main.js"></script>
-  <script src="notification-examples.js"></script>
+  <!-- <script src="scripts/main.js"></script> -->
+  <script src="notification-example.js"></script>
   <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 </body>
 </html>
