--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </main>
 
   <!-- <script src="scripts/main.js"></script> -->
-  <script src="notification-example.js"></script>
+  <script src="notifications-example.js"></script>
   <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 </body>
 </html>
