--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </header>
 
   <main>
-    <p>Добро пожаловать в демо-версию проекта Bauman Vizualizer. Здесь вы можете опробовать некоторый функционал</p>
+    <p>Добро пожаловать в демо-версию проекта Bauman Vizualizer. Здесь вы можете отправить тестовое уведомление</p>
     <p class="demo-btns">
       <button class="js-notification-overview" disabled>Пример уведомления</button>
     </p>
