--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyD35lLfDH05TL2ciBmn-pgNTUZi7rWTDvs",
-    authDomain: "bauman-vizualizer.firebaseapp.com",
-    databaseURL: "https://bauman-vizualizer.firebaseio.com",
-    projectId: "bauman-vizualizer",
-    storageBucket: "bauman-vizualizer.appspot.com",
-    messagingSenderId: "307543277844"
-  };
-  firebase.initializeApp(config);
-</script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,15 +20,71 @@
   </header>
 
   <main>
-    <p>Добро пожаловать в демо-версию проекта Bauman Vizualizer. Здесь вы можете отправить тестовое уведомление</p>
-    <p class="demo-btns">
-      <button class="js-notification-overview" disabled>Пример уведомления</button>
+    <p>Добро пожаловать в демо-версию Bauman Vizualizer. Здесь вы можете отправить тестовое уведомление</p>
+    <p>
+      <button disabled class="js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+        Включить пуш-уведомления
+      </button>
     </p>
-
+	  <p>
+      <button disabled class="demo-push mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+		Отправить пуш-уведомление (тест)
+      </button>
+    </p>
+    <p>
+      <button disabled class="study-status-push mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+		Отправить пуш-уведомление (статус обучения)
+      </button>
+    </p>
+    <p>
+      <button disabled class="military-push mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+		Отправить пуш-уведомление (военное обучение)
+      </button>
+    </p>
+    <p>
+      <button disabled class="grant-push mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+    Отправить пуш-уведомление (стипендия)
+      </button>
+    </p>
+    <p>
+      <button disabled class="study-form-push mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+    Отправить пуш-уведомление (форма обучения)
+      </button>
+    </p>
+    <p>
+      <button disabled class="study-type-push mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+    Отправить пуш-уведомление (основа обучения)
+      </button>
+    </p>
+    <p>
+      <button disabled class="multiple-push mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+    Отправить пуш-уведомление (множественное)
+      </button>
+    </p>
+    <p>
+      <button disabled class="session-push mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+    Отправить пуш-уведомление (сессия)
+      </button>
+    </p>
+    <p>
+      <button disabled class="point-push mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+    Отправить пуш-уведомление (оценка)
+      </button>
+    </p>
+    <!-- <section class="subscription-details js-subscription-details is-invisible">
+      <p>Once you've subscribed your user, you'd send their subscription to your
+      server to store in a database so that when you want to send a message
+      you can lookup the subscription and send a message to it.</p>
+      <p>To simplify things for this code lab copy the following details
+      into the <a href="https://web-push-codelab.glitch.me//">Push Companion
+      Site</a> and it'll send a push message for you, using the application
+      server keys on the site - so make sure they match.</p>
+      <pre><code class="js-subscription-json"></code></pre>
+    </section> -->
   </main>
 
-  <!-- <script src="scripts/main.js"></script> -->
-  <script src="notifications-example.js"></script>
+  <script src="scripts/main.js"></script>
+
   <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 </body>
 </html>
